// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Example /> basic test get snapshot 1`] = `
<div
  className="example"
>
  <h1>
    Hello World
  </h1>
  <hr />
  <h3
    className="blue"
  >
    blue
  </h3>
  <button
    onClick={[Function]}
  >
    button change mod
  </button>
  <hr />
  <h3
    id="input-value"
  />
  <input
    onChange={[Function]}
    value=""
  />
</div>
`;

exports[`<Example /> basic test mount snapshot 1`] = `
<Example>
  <div
    className="example"
  >
    <h1>
      Hello World
    </h1>
    <hr />
    <h3
      className="blue"
    >
      blue
    </h3>
    <button
      onClick={[Function]}
    >
      button change mod
    </button>
    <hr />
    <h3
      id="input-value"
    />
    <input
      onChange={[Function]}
      value=""
    />
  </div>
</Example>
`;
